--- a/templates/paper.html
+++ b/templates/paper.html
@@ -7,28 +7,28 @@
           <table class="table table-bordered table-hover table-responsive">
             <thead>
               <tr class="text-center">
-                  <th class="text-center">序号</th>
-                  <th class="text-center">是否被选</th>
+                  <th class="text-center" style="vertical-align: middle !important;">序号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">是否被选</th>
 
-                  <th class="text-center">题号</th>
-                  <th class="text-center">编号</th>
-                  <th class="text-center">翻译</th>
+                  <th class="text-center" style="vertical-align: middle !important;">题号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center col-xs-3" style="vertical-align: middle !important;">翻译</th>
 
-                  <th class="text-center">题号</th>
-                  <th class="text-center">编号</th>
-                  <th class="text-center">题1</th>
+                  <th class="text-center" style="vertical-align: middle !important;">题号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题1</th>
 
-                  <th class="text-center">题号</th>
-                  <th class="text-center">编号</th>
-                  <th class="text-center">题2</th>
+                  <th class="text-center" style="vertical-align: middle !important;">题号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题2</th>
 
-                  <th class="text-center">题号</th>
-                  <th class="text-center">编号</th>
-                  <th class="text-center">题3</th>
+                  <th class="text-center" style="vertical-align: middle !important;">题号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题3</th>
 
-                  <th class="text-center">题号</th>
-                  <th class="text-center">编号</th>
-                  <th class="text-center">题4</th>
+                  <th class="text-center" style="vertical-align: middle !important;">题号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题4</th>
               </tr>
             </thead>
             <tbody id="tbody_list">
@@ -54,10 +54,20 @@
             href_str += "<li><a href=\"#\">&laquo;</a></li>";
             for (let i = 0; i < pages; i++) {
                 let id_name = "href" + (i + 1);
-                href_str += "<li id = \"" + id_name + "\"><a href=\"#\" onclick = \"get_student_list(" + i + ")\">" + (i + 1) + "</a></li>";
+                href_str += "<li id = \"" + id_name + "\"><a href=\"#\" onclick = \"href_onclick(" + i + ", " + pages + ")\">" + (i + 1) + "</a></li>";
             }
             href_str += "<li><a href=\"#\">&raquo;</a></li>";
             href_body.innerHTML = href_str;
+            document.getElementById("href1").className = "active";
+        }
+
+
+        {# 设置分页链接点击事件 #}
+        function href_onclick(page, number) {
+            get_student_list(page);
+            for (let i = 0; i < number; i++) {
+                document.getElementById("href" + (i+1)).className = (i !== page) ? "" : "active";
+            }
         }
 
         {# 表格填充 #}
@@ -67,9 +77,10 @@
             for (let i = 0; i < lists.length; i++) {
                 let test_room, paper_flag;
                 paper_flag = (lists[i].paper_flag === 1) ? "已选" : "未选";
+                tbody_str +=  (lists[i].paper_flag === 1) ?  "<tr class='success'>" : "<tr class='warning'>";
                 test_room = (lists[i].test_room == null) ? "" : lists[i].test_room;
-                tbody_str += "<tr class='active'>" +
-                    "       <th scope='row'>" + lists[i].id + "</th>" +
+                tbody_str +=
+                    "       <th scope='row' class='text-center' style=\"vertical-align: middle !important;\">" + lists[i].id + "</th>" +
                     "       <td>" + paper_flag + "</td>" +
                     "       <td>" + lists[i].question1 + "</td>" +
                     "       <td>" + lists[i].code_1 + "</td>" +
