--- a/templates/student.html
+++ b/templates/student.html
@@ -20,6 +20,14 @@
 
             </tbody>
           </table>
+
+          <div class="col-xs-12">
+               <span>当前第</span>
+               <span id="current_page"></span>
+               <span>页</span>
+               <span id="page_summer"></span>
+          </div>
+
            <ul class="pagination" id = "page_list">
 
            </ul>
@@ -29,7 +37,7 @@
                 <div class="modal-dialog">
                     <div class="modal-content" style="">
                         <div class="modal-header">
-                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="get_student_list(0)">
+                            <button type="button" class="close" data-dismiss="modal" aria-hidden="true" onclick="get_student_list()">
                                 &times;
                             </button>
                             <h4 class="modal-title" id="myModalLabel">
@@ -42,7 +50,7 @@
         </div>
     </div>
 
-    <div class="col-xs-4">
+    <div class="col-xs-3">
         <form class="form-horizontal col-md-offset-0" id="test_form" name="login_form">
           <div class="form-group">
             <label for="type" class="col-sm-4 control-label">考生类型</label>
@@ -70,7 +78,7 @@
 
           <div class="form-group">
             <div class="col-sm-offset-4 col-sm-12">
-              <button type="submit" class="btn btn-info" name="choose" id="adding">添加</button>
+              <button type="submit" class="btn btn-info col-sm-7" name="choose" id="adding">添加</button>
             </div>
           </div>
         </form>
@@ -104,6 +112,15 @@
             for (let i = 0; i < number; i++) {
                 document.getElementById("href" + (i+1)).className = (i !== page) ? "" : "active";
             }
+            page_information(page, number);
+        }
+
+        {# 设置链接相关信息 #}
+        function page_information(current, summer) {
+            let current_info = document.getElementById("current_page");
+            let page_summer = document.getElementById("page_summer");
+            current_info.innerText = current+1;
+            page_summer.innerText = "      共" + summer + "页";
         }
 
         {# 表格填充 #}
@@ -154,6 +171,10 @@
 
         {# 获得学生列表 #}
         function get_student_list(list_start) {
+            if (list_start == null) {
+                list_start = parseInt(document.getElementById("current_page").innerText) - 1;
+            }
+
             {# 当前按钮设置 #}
             let student_input = {
                 data: JSON.stringify({
@@ -196,6 +217,7 @@
                     if (result.status === 200) {
                         href_insert(result.number);
                         insert_table(result.lists);
+                        page_information(0, parseInt((result.number + page_size - 1) / page_size));
                     }
                 },
                 error: function () {
