--- a/templates/paper.html
+++ b/templates/paper.html
@@ -7,28 +7,28 @@
           <table class="table table-bordered table-hover table-responsive">
             <thead>
               <tr class="text-center">
-                  <th class="text-center" style="vertical-align: middle !important;">序号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">试题编号</th>
                   <th class="text-center" style="vertical-align: middle !important;">是否被选</th>
 
                   <th class="text-center" style="vertical-align: middle !important;">题号</th>
-                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
+                  <th class="text-center" style="vertical-align: middle !important;">类型序号</th>
                   <th class="text-center col-xs-3" style="vertical-align: middle !important;">翻译</th>
 
                   <th class="text-center" style="vertical-align: middle !important;">题号</th>
-                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
-                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题1</th>
+                  <th class="text-center" style="vertical-align: middle !important;">类型序号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">食品工程</th>
 
                   <th class="text-center" style="vertical-align: middle !important;">题号</th>
-                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
-                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题2</th>
+                  <th class="text-center" style="vertical-align: middle !important;">类型序号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">食品工艺</th>
 
                   <th class="text-center" style="vertical-align: middle !important;">题号</th>
-                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
-                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题3</th>
+                  <th class="text-center" style="vertical-align: middle !important;">类型序号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">食品化学</th>
 
                   <th class="text-center" style="vertical-align: middle !important;">题号</th>
-                  <th class="text-center" style="vertical-align: middle !important;">编号</th>
-                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">题4</th>
+                  <th class="text-center" style="vertical-align: middle !important;">类型序号</th>
+                  <th class="text-center col-xs-2" style="vertical-align: middle !important;">食品微生物</th>
               </tr>
             </thead>
             <tbody id="tbody_list">
