--- a/templates/base.html
+++ b/templates/base.html
@@ -18,9 +18,6 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-{#                <a class="navbar-brand" href="#">#}
-{#                    <img class="logo" alt="Brand" src="img/index.jpg">#}
-{#                </a>#}
                 <a class="navbar-brand" href="">研究生考试复试系统</a>
             </div>
             <div class="navbar-collapse collapse">
@@ -31,7 +28,8 @@
                     <li><a href="/question">考生抽题</a></li>
                     <li><a href="/list">考生选题</a></li>
                     {% if current_user.is_authenticated %}
-                        <li><a href="">欢迎 {{ current_user.get_id() }} </a></li>
+                        <li><a href="#">欢迎 {{ current_user.get_id() }} </a></li>
+                        <li><a href="#">角色：管理员</a> </li>
                         <li><a href="/logout">退出</a></li>
                     {% endif %}
                 </ul>
