--- a/templates/login.html
+++ b/templates/login.html
@@ -13,7 +13,7 @@
           <div class="form-group">
             <label for="password" class="col-sm-4 control-label">密码</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="password" placeholder="密码" name="password">
+              <input type="password" class="form-control" id="password" placeholder="密码" name="password">
             </div>
           </div>
 
@@ -35,7 +35,7 @@
                 data: $('#login_form').serialize(),
                 success: function (result) {
                     if (result.status === 200) {
-                        window.location.href = "/question";
+                        window.location.href = "question";
                     } else {
                         {# 用户名或者密码错误 #}
                         alert(result.message)
