--- a/templates/student.html
+++ b/templates/student.html
@@ -8,11 +8,11 @@
             <thead>
               <tr class="text-center">
                 <th class="text-center">序号</th>
-                  <th class="text-center">考生号</th>
+                  <th class="text-center">考试编号</th>
                   <th class="text-center">考生姓名</th>
                   <th class="text-center">报考类型</th>
-                  <th class="text-center">考场号</th>
-                  <th class="text-center">座号</th>
+                  <th class="text-center">组号</th>
+                  <th class="text-center">组内序号</th>
                   <th class="text-center">操作</th>
               </tr>
             </thead>
@@ -57,22 +57,23 @@
             <div class="col-sm-8">
               <select class="form-control" id="type" name="type">
                   <option value="学硕">学硕</option>
-                  <option value="专硕">专硕</option>
-                </select>
+                  <option value="工程硕士">工程硕士</option>
+                  <option value="农业硕士">农业硕士</option>>
+              </select>
             </div>
           </div>
 
           <div class="form-group">
-            <label for="id" class="col-sm-4 control-label">考生号</label>
+            <label for="id" class="col-sm-4 control-label">考试编号</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="username" placeholder="用户名" name="id">
+              <input type="text" class="form-control" id="username" placeholder="考试编号" name="id">
             </div>
           </div>
 
           <div class="form-group">
-            <label for="name" class="col-sm-4 control-label">姓名</label>
+            <label for="name" class="col-sm-4 control-label">考生姓名</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="username" placeholder="用户名" name="name">
+              <input type="text" class="form-control" id="username" placeholder="考生姓名" name="name">
             </div>
           </div>
 
@@ -125,12 +126,20 @@
 
         {# 表格填充 #}
         function insert_table(lists) {
+            let rooms = {
+              "A": "第一组",
+              "B": "第二组",
+              "C": "第三组",
+              "D": "第四组",
+              "E": "第五组",
+              "F": "第六组"
+            };
             let tbody_str = "";
             tbody.innerHTML = "";
             for (let i = 0; i < lists.length; i++) {
                 let test_room, test_number;
                 test_number = (lists[i].test_number == null) ? "" : lists[i].test_number;
-                test_room = (lists[i].test_room == null) ? "" : lists[i].test_room;
+                test_room = (lists[i].test_room == null) ? "" : rooms[lists[i].test_room];
                 tbody_str += (i % 2 === 0) ? "<tr class='active'>" : "<tr class='warning'>";
                 tbody_str +=
                     "       <th scope='row' class='text-center'>" + (i + 1) + "</th>" +
